# pthread

./: CMakeLists.txt  no_thread  v4l2cap.cpp  vediocap.cpp
